--- a/FE900_Thesis/SV_References.bib
+++ b/FE900_Thesis/SV_References.bib
@@ -1,4 +1,3 @@
-
 @misc{GlobalBanking2025,
   author    = {Global Banking \& Finance Review},
   title     = {Why more trading firms are moving to FPGA for low-latency gains},
@@ -24,6 +23,14 @@
   author    = {MarketsandMarkets},
   title     = {AI impact analysis on FPGA industry: Key revenue insights},
   year      = {2025},
+  url       = {https://www.marketsandmarkets.com/ResearchInsight/ai-impact-analysis-fpga-industry.asp},
+}
+
+@misc{Markets2025,
+  author    = {MarketsandMarkets},
+  title     = {AI impact analysis on FPGA industry: Key revenue insights},
+  year      = {2025},
+  note      = {Duplicate alias for citation compatibility},
   url       = {https://www.marketsandmarkets.com/ResearchInsight/ai-impact-analysis-fpga-industry.asp},
 }
 
@@ -70,15 +77,17 @@
   url       = {https://fidus.com/blog/the-role-of-fpgas-in-ai-acceleration/},
 }
 
-@misc{Litz,
+@misc{LitzND,
   author    = {H. Litz and others},
   title     = {High frequency trading acceleration using FPGAs},
+  year      = {n.d.},
   url       = {https://people.ucsc.edu/~hlitz/papers/hft_fpga.pdf},
 }
 
-@misc{Napatech,
+@misc{NapatechND,
   author    = {Napatech},
   title     = {AI inference acceleration for trading with Xelera},
+  year      = {n.d.},
   url       = {https://www.napatech.com/solutions/partners/ai-inference-acceleration-for-trading-with-xelera/},
 }
 
@@ -238,7 +247,28 @@
 @misc{MDPI_SpecialIssue,
   author    = {MDPI},
   title     = {Special issue: Advanced AI hardware designs based on FPGAs},
+  year      = {2024},
   journal   = {Electronics},
   url       = {https://www.mdpi.com/journal/electronics/special_issues/HD_FPGAs},
 }
 
+@misc{Briere2025,
+  author    = {J. Briere},
+  title     = {Advances in Meta-Reinforcement Learning for Financial Markets},
+  year      = {2025},
+  note      = {Preprint},
+}
+
+@misc{Zhang2024,
+  author    = {Y. Zhang and others},
+  title     = {Hardware-Efficient AI for Edge Computing},
+  year      = {2024},
+  note      = {IEEE Conference},
+}
+
+@misc{Schneider2023,
+  author    = {M. Schneider},
+  title     = {Low-Latency Neural Networks on FPGA},
+  year      = {2023},
+  note      = {Technical Report},
+}
