--- a/FE900_Thesis/titlepg.sty
+++ b/FE900_Thesis/titlepg.sty
@@ -6,7 +6,7 @@
 %       updated copyright page - May 2010 
 %
 \newcommand{\thesistitle}{AI-Integrated FPGA for Market Making in Volatile Environments}
-\newcommand{\thesisyear}{2026}
+\newcommand{\thesisyear}{\the\year}
 \newcommand{\thesisname}{Shreejit Verma}
 \newcommand{\thesischairadvisor}{Dragos Bozdog}    % this name prints on the title page as chairman and the abstract page as advisor
 \newcommand{\committeenameA}{Ionut Florescu}  % 
@@ -14,7 +14,7 @@
 %\newcommand{\committeenameC}{Bob Johnston}
 %\newcommand{\committeenameD}{Suzanne Smitty}
 \newcommand{\thesisdepartment}{Financial Engineering}
-\newcommand{\thesisdate}{January 19, 2026}
+\newcommand{\thesisdate}{\today}
 \newcommand{\thesistype}{thesis}
 \newcommand{\thesisdegree}{MASTER OF SCIENCE - FINANCIAL ENGINEERING}
 \newcommand{\thesissigline}[1]{%
